--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "test": "npx hardhat test",
+    "compile": "npx hardhat"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
@@ -23,6 +27,7 @@
     "solidity-coverage": "^0.8.1",
     "ts-node": ">=8.0.0",
     "typechain": "^8.2.0",
-    "typescript": ">=4.5.0"
+    "typescript": ">=4.5.0",
+    "web3": "^4.2.0"
   }
 }
